# connector-x

./: .buildinfo  .env  .gitignore  .gitmodules  Benchmark.md  CONTRIBUTING.md  Cargo.toml  Contribute.md  Federation.md  Justfile  LICENSE  README.md  Types.md  api.html  benchmark.md  crates.js  databases.html  deny.toml  freq_questions.html  genindex.html  install.html  intro.html  main.js  objects.inv  read_sql.ipynb  search-index.js  search.html  searchindex.js  settings.html  source-files.js
connector-agent/: Cargo.toml
connector-agent-python/: Cargo.toml  build.rs  profile.pb  pyproject.toml
connector-agent-python/benches/: bench_string.rs  tpch.rs  tpch_old.rs
connector-agent-python/connector_agent/: __init__.py
connector-agent-python/connector_agent/tests/: test_read_sql.py
connector-agent-python/connector_agent_python/: __init__.py
connector-agent-python/connector_agent_python/tests/: test_read_sql.py  test_write_pandas.py
connector-agent-python/examples/: flame_tpch.rs  perf_tpch.rs  tpch.rs
connector-agent-python/src/: errors.rs  lib.rs  read_sql.rs  types.rs
connector-agent-python/src/pandas/: destination.rs  funcs.rs  mod.rs  pandas_assoc.rs  pandas_column.rs  pystring.rs  transport.rs  types.rs  writers.rs
connector-agent-python/src/writers/: mod.rs
connector-agent/benches/: bench_option.rs  perf_option.rs  profiler.rs
connector-agent/examples/: write_dummy.rs
connector-agent/examples/tests/: test_dummy.rs
connector-agent/src/: any_array.rs  data_order.rs  dispatcher.rs  dummy_typesystem.rs  errors.rs  lib.rs  macros.rs  partition.rs  pg.rs  s3.rs  transmit.rs  types.rs  typesystem.rs  worker.rs
connector-agent/src/connections/: mod.rs  postgres.rs
connector-agent/src/conversions/: mod.rs  postgres_datatype.rs  postgres_pandas.rs
connector-agent/src/data_sources/: csv.rs  dummy.rs  mixed.rs  mod.rs  postgres.rs
connector-agent/src/destinations/: mod.rs
connector-agent/src/sources/: csv.rs  (+2 more)
connector-agent/tests/: test_arrow.rs  test_csv.rs  test_dummy.rs  test_mix.rs  test_option.rs  test_postgres.rs  uspop.csv
connectorx/: Cargo.toml  all.html  index.html  macro.impl_transport!.html  macro.impl_transport.html  macro.impl_typesystem!.html  macro.impl_typesystem.html  sidebar-items.js
connectorx-cpp/: Cargo.toml
connectorx-cpp/src/: lib.rs  plan.rs
connectorx-python/: Cargo.toml  build.rs  pyproject.toml
connectorx-python/connectorx/: __init__.py  connectorx.pyi  test_xy.py
connectorx-python/examples/: flame_tpch.rs  tpch.rs
connectorx-python/src/: arrow.rs  arrow2.rs  constants.rs  cx_read_sql.rs  errors.rs  lib.rs  read_sql.rs  source_router.rs
connectorx/constants/: constant.DB_BUFFER_SIZE.html  constant.ORACLE_ARRAY_SIZE.html  constant.RECORD_BATCH_SIZE.html  index.html  sidebar-items.js
connectorx/data_order/: enum.DataOrder.html  fn.coordinate.html  index.html  sidebar-items.js
connectorx/destinations/: index.html  sidebar-items.js  trait.Consume.html  trait.Destination.html  trait.DestinationPartition.html
connectorx/dispatcher/: index.html  struct.Dispatcher.html
connectorx/dummy_typesystem/: enum.DummyTypeSystem.html  index.html  sidebar-items.js
connectorx/errors/: enum.ConnectorAgentError.html  enum.ConnectorXError.html  enum.ProduceContext.html  index.html  sidebar-items.js  type.Result.html
connectorx/examples/: batch_test.rs  federated_test.rs  jvm_test.rs  mssql.rs  postgres.rs  sqlx.rs  sqlx_rt.rs
connectorx/macros/: index.html
connectorx/partition/: fn.pg_get_partition_range.html  fn.pg_single_col_partition_query.html  index.html  sidebar-items.js
connectorx/prelude/: index.html  sidebar-items.js  struct.Dispatcher.html
connectorx/source_router/: enum.SourceType.html  index.html  struct.SourceConn.html
connectorx/sources/: index.html  sidebar-items.js  trait.PartitionParser.html  trait.Produce.html  trait.Source.html  trait.SourcePartition.html
connectorx/sql/: enum.CXQuery.html  fn.count_query.html  fn.get_limit.html  fn.get_partition_range_query.html  fn.get_partition_range_query_sep.html  fn.limit1_query.html  fn.single_col_partition_query.html  index.html  sidebar-items.js
connectorx/src/: arrow_batch_iter.rs  constants.rs  data_order.rs  dispatcher.rs  dummy_typesystem.rs  errors.rs  fed_dispatcher.rs  fed_rewriter.rs  get_arrow.rs  get_arrow2.rs  lib.rs  macros.rs  partition.rs  pg.rs  s3.rs  source_router.rs  sql.rs  typesystem.rs  utils.rs
connectorx/tests/: .test_postgres.rs.swp  test_arrow.rs  test_arrow2.rs  test_arrow2_polars.rs  test_bigquery.rs  test_clickhouse.rs  test_csv.rs  test_db.rs  test_fed.rs  test_mix.rs  test_mssql.rs  test_mysql.rs  test_oracle.rs  test_polars.rs  test_polars2.rs  test_postgres.rs  test_trino.rs
connectorx/transports/: enum.BigQueryArrowTransportError.html  enum.MsSQLArrow2TransportError.html  enum.MsSQLArrowTransportError.html  enum.MySQLArrow2TransportError.html  enum.MySQLArrowTransportError.html  enum.OracleArrow2TransportError.html  enum.OracleArrowTransportError.html  enum.PostgresArrow2TransportError.html  enum.PostgresArrowTransportError.html  enum.SQLiteArrow2TransportError.html  enum.SQLiteArrowTransportError.html  index.html  sidebar-items.js  struct.BigQueryArrowTransport.html  struct.CSVArrowTransport.html  struct.CSVMemoryTransport.html  struct.DummyArrow2Transport.html  struct.DummyArrowTransport.html  struct.DummyMemoryTransport.html  struct.MsSQLArrow2Transport.html  struct.MsSQLArrowTransport.html  struct.MySQLArrow2Transport.html  struct.MySQLArrowTransport.html  struct.MysqlArrowTransport.html  struct.OracleArrow2Transport.html  struct.OracleArrowTransport.html  struct.PostgresArrow2Transport.html  struct.PostgresArrowTransport.html  struct.PostgresMemoryTransport.html  struct.SQLiteArrow2Transport.html  struct.SQLiteArrowTransport.html  struct.SqliteArrowTransport.html
connectorx/typesystem/: fn.process.html  index.html  sidebar-items.js  trait.ParameterizedFunc.html  trait.ParameterizedOn.html  trait.Realize.html  trait.Transport.html  trait.TypeAssoc.html  trait.TypeConversion.html  trait.TypeSystem.html
(+37156 files in other folders)
