[workspace]
default-members = ["connectorx"]
members = ["connectorx", "connectorx-cpp"]
resolver = "2"

[profile.release]
debug = true
lto = true

[workspace.dependencies]
arrow = {version = "55", features = ["prettyprint", "ffi"]}
polars = {version = "0.45", features=["dtype-u8", "dtype-u16", "lazy"]}
polars-arrow = {version = "0.45"}