[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "connector-agent-python"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow = "3"
connector-agent = {path = "../connector-agent"}
env_logger = "0.8"
failure = "0.1"
fehler = "1"
flate2 = "1"
futures = "0.3"
itertools = "0.10"
log = "0.4"
ndarray = "0.14"
numpy = "0.13"
pyo3 = {version = "0.13.0", features = ["extension-module"]}
thiserror = "1"
tokio = {version = "1", features = ["rt-multi-thread", "io-util"]}

[lib]
crate-type = ["cdylib"]
name = "connector_agent_python"
