[tool.poetry]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = ""
name = "connector_agent_python"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1"
pandas = "^1"
python = "^3.6.1"

[tool.poetry.dev-dependencies]
maturin = "^0.9.4"
pytest = "^6.2"
docopt = "^0.6.2"
pyarrow = "^3.0.0"
contexttimer = "^0.3.3"
SQLAlchemy = "^1.3.23"
psycopg2 = "^2.8.6"

[build-system]
build-backend = "maturin"
requires = ["maturin>=0.10,<0.11"]
