[tool.poetry]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = ""
include = ["connector_agent_python/*.so", "connector_agent_python/*.pyd"]
name = "connector_agent_python"

version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1"
pandas = "^1"
python = "^3.7.1"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^1.3.23"
black = "^20.8b1"
contexttimer = "^0.3.3"
dask = {extras = ["complete"], version = "^2021.3.0"}
docopt = "^0.6.2"
maturin = "^0.9.4"
modin = "^0.9.0"
psycopg2-binary = "^2.8.6"
pyarrow = "^3.0.0"
pytest = "^6.2"

[build-system]
# build-backend = "maturin"
# requires = ["maturin>=0.10,<0.11"]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
