[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "connector-agent"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow = "3"
chrono = "0.4"
csv = "1"
env_logger = "0.8"
fehler = "1"
flate2 = "1"
futures = "0.3"
itertools = "0.10"
log = "0.4"
ndarray = "0.14"
num-traits = "0.2"
postgres = {version = "0.19", features = ["with-chrono-0_4"]}
r2d2 = "0.8"
r2d2_postgres = "0.18"
rand = "0.8"
rayon = "1"
rusoto_core = "0.46"
rusoto_s3 = "0.46"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlparser = "0.8"
strum = {version = "0.20", features = ["derive"]}
thiserror = "1"
tokio = {version = "1", features = ["rt-multi-thread", "io-util"]}

[lib]
crate-type = ["cdylib", "rlib"]
name = "connector_agent"

[dev-dependencies]
criterion = "0.3"
iai = "0.1"
pprof = {version = "0.3", features = ["flamegraph"]}

[[bench]]
harness = false
name = "bench_option"
path = "benches/bench_option.rs"

[[bench]]
harness = false
name = "perf_option"
path = "benches/perf_option.rs"
