[package]
name = "connectorx-cpp"
version = "0.3.3-alpha.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
connectorx = {path = "../connectorx", default-features = false}
arrow = {workspace = true}
openssl = {version = "0.10", features = ["vendored"]}

[lib]
crate-type = ["cdylib"]
name = "connectorx_cpp"

[features]
default = ["fptr", "nbstr", "dsts", "srcs", "federation"]
light = ["fptr", "nbstr", "dsts_light" , "srcs_light", "federation"]
srcs_light = ["connectorx/src_postgres"]
dsts_light = ["connectorx/dst_arrow"]

dsts = ["connectorx/dst_arrow", "connectorx/dst_arrow2"]
fptr = ["connectorx/fptr"]
branch = ["connectorx/branch"]
federation = ["connectorx/federation"]
nbstr = []
srcs = [
  "connectorx/src_postgres",
  "connectorx/src_mysql",
  "connectorx/src_sqlite",
  "connectorx/src_mssql",
  "connectorx/src_oracle",
  "connectorx/src_bigquery",
]
