[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "connectorx-python"
version = "0.2.1-alpha.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow = "5"
bitfield = "0.13"
bytes = "1"
chrono = "0.4"
connectorx = {path = "../connectorx", default-features = false}
dict_derive = "0.4"
env_logger = "0.9"
fehler = "1"
itertools = "0.10"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
ndarray = "0.15"
numpy = "0.14"
postgres = {version = "0.19", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]}
postgres-native-tls = {version = "0.5"}
pyo3 = {version = "0.14", default-features = false, features = ["macros"]}
pyo3-built = "0.4"
r2d2-oracle = {version = "0.5.0", features = ["chrono"]}
r2d2_mysql = {version = "21.0"}
rusqlite = {version = "0.25", features = ["column_decltype", "chrono", "bundled"]}
rust_decimal = {version = "1", features = ["db-postgres"]}
serde_json = "1"
sqlparser = "0.11"
thiserror = "1"
tiberius = "0.5"
tokio = {version = "1", features = ["rt", "rt-multi-thread", "net"]}
tokio-util = "0.6"
url = "2"
uuid = "0.8"
urlencoding = "2.1"

[build-dependencies]
built = {version = "0.5", features = ["chrono"]}

[dev-dependencies]
criterion = "0.3"
criterion-macro = "0.3"
iai = "0.1"
pprof = {version = "0.5", features = ["flamegraph", "criterion", "protobuf"]}
rayon = "1"

[lib]
crate-type = ["rlib", "cdylib"]
name = "connectorx_python"

[features]
branch = ["connectorx/branch"]
default = ["extension", "fptr", "nbstr", "dsts", "srcs"]
dsts = ["connectorx/dst_arrow"]
executable = ["pyo3/auto-initialize"]
extension = ["pyo3/extension-module"]
fptr = ["connectorx/fptr"]
nbstr = []
srcs = ["connectorx/src_postgres", "connectorx/src_mysql", "connectorx/src_sqlite", "connectorx/src_mssql", "connectorx/src_oracle"]
