[tool.poetry]
authors = ["SFU Database System Lab <dsl.cs.sfu@gmail.com>"] 
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Build Tools",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering",
  "Framework :: IPython",
] 
description = "Load data from databases to dataframes, the fastest way." 
include = ["connectorx/*.so", "connectorx/*.pyd", "LICENSE"] 
keywords = ["read_sql"] 
license = "MIT" 
maintainers = ["Weiyuan Wu <youngw@sfu.ca>"] 
name = "connectorx" 
readme = "README.md" # Markdown files are supported
version = "0.2.3" 

[tool.poetry.dependencies]
dask = {version = "^2021", optional = true, extras = ["dataframe"]}
modin = {version = ">=0.10", optional = true}
numpy = "^1"
pandas = {version = "^1", optional = true}
polars = {version = ">=0.8", optional = true}
pyarrow = {version = ">=4", optional = true}
python = "^3.7.1"

[tool.poetry.extras]
all = ["dask", "pandas", "modin", "polars", "pyarrow"]
dask = ["dask", "pandas"]
modin = ["modin", "pandas"]
pandas = ["pandas"]
polars = ["pyarrow", "polars"]
pyarrow = ["pyarrow"]

[tool.poetry.dev-dependencies]
PyHive = "^0.6.4"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.3.23"
black = "^20.8b1"
clickhouse-driver = "^0.2.1"
contexttimer = "^0.3.3"
cx-Oracle = "^8.2.1"
dask = {extras = ["dataframe"], version = "^2021.7.0"}
docopt = "^0.6.2"
ipython = "^7.25.0"
maturin = "^0.9.4"
modin = {extras = ["dask"], version = ">=0.10.1"}
mysqlclient = "^2.0.3"
pandahouse = "^0.2.7"
polars = ">=0.8"
presto-python-client = "^0.8.1"
psycopg2-binary = "^2.8.6"
pyarrow = ">=4"
pymssql = "^2.2.2"
pytest = "^6.2"
pytest-benchmark = "^3.4.1"
sqlalchemy-redshift = "^0.8.4"
twine = "^3.4.1"

[tool.pytest.ini_options]
minversion = "6.0"
python_functions = "test_* bench_*"
# python_files = check_*.py
# python_classes = Check
# addopts = "-ra -q"
# testpaths = [
#   "tests",
#   "integration",
# ]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
