[package]
authors = ["SFU Database System Lab <dsl.cs.sfu@gmail.com>"]
description = "Load data from databases to dataframes, the fastest way."
documentation = "https://docs.rs/connectorx"
edition = "2018"
license = "MIT"
name = "connectorx"
readme = "../README.md"
repository = "https://github.com/sfu-db/connector-x"
version = "0.2.4-alpha.8"


[dependencies]
anyhow = "1"
fehler = "1"
itertools = "0.10"
log = "0.4"
rayon = "1"
sqlparser = "0.11"
thiserror = "1"

arrow = {version = "6.4.0", optional = true}
arrow2 = {version = "0.8", optional = true, default-features = false}
bb8 = {version = "0.7", optional = true}
bb8-tiberius = {version = "0.5", optional = true}
chrono = {version = "0.4", optional = true}
csv = {version = "1", optional = true}
fallible-streaming-iterator = {version = "0.1", optional = true}
futures = {version = "0.3", optional = true}
gcp-bigquery-client = {version = "0.10.0", optional = true}
hex = {version = "0.4", optional = true}
native-tls = {version = "0.2", optional = true}
ndarray = {version = "0.15", optional = true}
num-traits = {version = "0.2", optional = true}
owning_ref = {version = "0.4", optional = true}
oracle = {version = "0.5", optional = true}
polars = {version = "0.18", optional = true}
postgres = {version = "0.19", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"], optional = true}
postgres-native-tls = {version = "0.5", optional = true}
r2d2 = {version = "0.8", optional = true}
r2d2-oracle = {version = "0.5.0", features = ["chrono"], optional = true}
r2d2_mysql = {version = "21.0", optional = true}
r2d2_postgres = {version = "0.18.1", optional = true}
r2d2_sqlite = {version = "0.18", optional = true}
regex = {version = "1", optional = true}
rusqlite = {version = "0.25", features = ["column_decltype", "chrono", "bundled"], optional = true}
rust_decimal = {version = "1", features = ["db-postgres"], optional = true}
serde_json = {version = "1", optional = true}
tiberius = {version = "0.5", features = ["rust_decimal", "chrono"], optional = true}
tokio = {version = "1", features = ["rt", "rt-multi-thread", "net"], optional = true}
url = {version = "2", optional = true}
urlencoding = {version = "2.1", optional = true}
uuid = {version = "0.8", optional = true}

[lib]
crate-type = ["cdylib", "rlib"]
name = "connectorx"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
iai = "0.1"
pprof = {version = "0.5", features = ["flamegraph"]}

[features]
all = ["src_sqlite", "src_postgres", "src_mysql", "src_mssql", "src_oracle", "src_bigquery", "src_csv", "src_dummy", "dst_arrow", "dst_arrow2"]
branch = []
default = ["fptr"]
dst_arrow = ["arrow", "chrono"]
dst_arrow2 = ["arrow2", "chrono", "polars"]
fptr = []
src_csv = ["csv", "regex", "chrono"]
src_dummy = ["num-traits", "chrono"]
src_mssql = ["rust_decimal", "num-traits", "chrono", "tiberius", "bb8-tiberius", "bb8", "tokio", "url", "uuid", "owning_ref", "futures", "urlencoding"]
src_mysql = ["r2d2_mysql", "rust_decimal", "num-traits", "chrono", "serde_json", "r2d2"]
src_oracle = ["oracle", "r2d2-oracle", "chrono", "r2d2", "urlencoding", "url"]
src_postgres = [
  "postgres",
  "r2d2_postgres",
  "postgres-native-tls",
  "csv",
  "hex",
  "serde_json",
  "uuid",
  "rust_decimal",
  "num-traits",
  "chrono",
  "r2d2",
  "url",
  "native-tls",
]
src_sqlite = ["rusqlite", "r2d2_sqlite", "fallible-streaming-iterator", "owning_ref", "chrono", "r2d2"]
src_bigquery = ["gcp-bigquery-client", "serde_json", "url", "tokio"]
[package.metadata.docs.rs]
features = ["all"]
