[package]
authors = ["SFU Database System Lab <dsl.cs.sfu@gmail.com>"]
description = "Load data from databases to dataframes, the fastest way."
documentation = "https://docs.rs/connectorx"
edition = "2018"
license = "MIT"
name = "connectorx"
readme = "../README.md"
repository = "https://github.com/sfu-db/connector-x"
version = "0.3.3-alpha.1"

[dependencies]
anyhow = "1"
fehler = "1"
itertools = "0.10"
log = "0.4"
rayon = "1"
sqlparser = "0.37"
thiserror = "1"
url = "2"
owning_ref = "0.4"
serde_json = "1"
chrono = "0.4"

arrow = {workspace = true, optional = true}
arrow2 = {workspace = true, default-features = false, optional = true}
bb8 = {version = "0.7", optional = true}
bb8-tiberius = {version = "0.5", optional = true}
csv = {version = "1", optional = true}
fallible-streaming-iterator = {version = "0.1", optional = true}
futures = {version = "0.3", optional = true}
gcp-bigquery-client = {version = "0.13.0", optional = true}
hex = {version = "0.4", optional = true}
native-tls = {version = "0.2", optional = true}
ndarray = {version = "0.15", optional = true}
num-traits = {version = "0.2", optional = true}
openssl = {version = "0.10", optional = true}
oracle = {version = "0.5", optional = true}
polars = {version = "0.32", optional = true, features=["dtype-u8", "dtype-u16"]}
postgres = {version = "0.19", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"], optional = true}
postgres-native-tls = {version = "0.5", optional = true}
postgres-openssl = {version = "0.5", optional = true}
mysql_common = {version = "0.29", features = ["chrono"], optional = true}
r2d2 = {version = "0.8", optional = true}
r2d2-oracle = {version = "0.6", features = ["chrono"], optional = true}
r2d2_mysql = {version = "23", optional = true}
r2d2_postgres = {version = "0.18.1", optional = true}
r2d2_sqlite = {version = "0.22.0", optional = true}
regex = {version = "1", optional = true}
rusqlite = {version = "0.29.0", features = ["column_decltype", "chrono", "bundled"], optional = true}
rust_decimal = {version = "1", features = ["db-postgres"], optional = true}
rust_decimal_macros = {version = "1", optional = true}
tiberius = {version = "0.5", features = ["rust_decimal", "chrono", "integrated-auth-gssapi"], optional = true}
tokio = {version = "1", features = ["rt", "rt-multi-thread", "net"], optional = true}
tokio-util = {version = "0.6", optional = true}
urlencoding = {version = "2.1", optional = true}
uuid = {version = "0.8", optional = true}
j4rs = {version = "0.15", optional = true}
datafusion = {version = "31", optional = true}

[lib]
crate-type = ["cdylib", "rlib"]
name = "connectorx"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
iai = "0.1"
pprof = {version = "0.5", features = ["flamegraph"]}

[features]
all = ["src_sqlite", "src_postgres", "src_mysql", "src_mssql", "src_oracle", "src_bigquery", "src_csv", "src_dummy", "dst_arrow", "dst_arrow2", "federation", "fed_exec"]
branch = []
default = ["fptr"]
dst_arrow = ["arrow"]
dst_arrow2 = ["polars", "arrow2"]
fptr = []
src_bigquery = ["gcp-bigquery-client", "tokio"]
src_csv = ["csv", "regex"]
src_dummy = ["num-traits"]
src_mssql = ["rust_decimal", "num-traits", "tiberius", "bb8-tiberius", "bb8", "tokio", "tokio-util", "uuid", "futures", "urlencoding"]
src_mysql = ["r2d2_mysql", "mysql_common", "rust_decimal", "num-traits", "r2d2"]
src_oracle = ["oracle", "r2d2-oracle","r2d2", "urlencoding"]
src_postgres = [
  "postgres",
  "r2d2_postgres",
  "postgres-native-tls",
  "csv",
  "hex",
  "uuid",
  "rust_decimal",
  "rust_decimal_macros",
  "num-traits",
  "r2d2",
  "native-tls",
  "openssl",
  "postgres-openssl",
]
src_sqlite = ["rusqlite", "r2d2_sqlite", "fallible-streaming-iterator", "r2d2", "urlencoding"]
federation = ["j4rs"]
fed_exec = ["datafusion", "tokio"]
integrated-auth-gssapi = ["tiberius/integrated-auth-gssapi"]

[package.metadata.docs.rs]
features = ["all"]
